Fixade dashboard alignement

--- a/WebClient/css/ecoactions.css
+++ b/WebClient/css/ecoactions.css
@@ -36,7 +36,7 @@
   }
   
   .nav button {
-    padding: 37px 10px;
+    padding: 68px 10px;
     margin: 10% 0;
     border-radius: 20px;
     font-size: 16px;
